--- a/assets/css/app.style.css
+++ b/assets/css/app.style.css
@@ -285,7 +285,7 @@ a:hover {
 
 /* Container fluids with two different background colors */
 .container-fluid.with-bg-1 {
-	background: #f5f5f5;
+	background: #000;
 }
 
 .container-fluid.with-bg-2 {
@@ -311,7 +311,7 @@ a:hover {
 /* Overwriting background */
 .homeapp-header.one-page-header {
     box-shadow: 0 3px 1px #ebebeb;
-    background: #fff;
+    background: #000;
 }
 
 /* Overwriting navbar brand (logo) */
@@ -320,7 +320,7 @@ a:hover {
 	height: auto;
 }
 .navbar-brand > img {
-  width: 130px;
+  width: 75px;
   opacity: .8;
 }
 @media (min-width: 992px) {
